# grammar-detector

./: .gitignore  Pipfile  README.md  build.sh  patterns.json  pyproject.toml  settings.py  settings.yaml  setup.py
grammardetector/: Config.py  GrammarDetector.py  Input.py  Nlp.py  Repository.py  __init__.py  __main__.py  defaults.py  logger.py
grammardetector/detectors/: Detector.py  DetectorRepository.py  DetectorTester.py
grammardetector/loaders/: FileLoader.py  __init__.py
grammardetector/matchers/: MatchSetMatcher.py  RawMatcher.py
grammardetector/matches/: Match.py  MatchSet.py  __init__.py
grammardetector/patterns/: PatternSet.py  PatternSetRepository.py  __init__.py
grammardetector/utils/: Filepath.py  Timekeeper.py  __init__.py  flatten.py  singleton.py  token_data.py  token_table.py
patterns/: determiners.json  determiners.yaml  persons.json  persons.yaml  tense_aspects.json  tense_aspects.yaml  transitivity.json  transitivity.yaml  voices.json  voices.yaml
patternsets/: .example-with-notes.yaml  .example-without-notes.yaml  .template-with-notes.yaml  .template-without-notes.yaml  .template.yaml  determiners.yaml  persons.yaml  tense_aspects.yaml  transitivity.yaml  voices.yaml
settings/: Config.py  DataConfig.py  Filepath.py  LoggerConfig.py  PatternSetConfig.py  __init__.py  data.yaml  logger.yaml  patternsets.yaml  settings.yaml
settings/models/: Config.py  PatternSetConfig.py  __init__.py
src/: Cache.py  Config.py  GrammarDetector.py  Matcher.py  SyntaxDetector.py  SyntaxPatterns.py  __init__.py  __main__.py  cache.py  config.py  decorators.py  detectors.py  detectors.py.new  extractors.py  inputs.py  loaders.py  logger.py  matchers.py  models.py  nlp.py  patterns.py  repositories.py  utils.py  validators.py
src-old/core/: __init__.py  transformer.py
src-old/features/: __init__.py  detector.py  similarity.py
src-old/util/: misc_tools.py
src.old/: __main__.py  cache.py  extractors.py  loaders.py  logger.py  nlp.py
src.old/enum/: Person.py  Purpose.py
src.old/patterns/: PatternSet.py  __init__.py
src.old/util/: serializable.py  spacy.py  validator.py
src/core/: __init__.py  pattern.py  transformer.py
src/detectors/: Detector.py  DetectorRepository.py  __init__.py
src/enum/: Feature.py
src/enums/: Aspect.py  Feature.py  Person.py  Purpose.py  Tense.py  Voice.py
src/features/: __init__.py  detector.py  model.py  similarity.py
src/loaders/: YamlLoader.py
src/matchers/: BaseMatcher.py  LongestMatcher.py  Match.py  MatchSetMatcher.py  Matcher.py  PatternSetMatcher.py  PatternSetMatcher.py.old  RawMatcher.py  SoloMatcher.py  __init__.py
src/matches/: Match.py  MatchSet.py
src/patterns/: Meta.py  Pattern.py  PatternSet.py  PatternSetRepository.py  __init__.py  load.py
src/util/: Builder.py  builder.py  decorator.py  is_in_enum.py  matcher.py  misc_tools.py  serializable.py  (+3 more)
syntax_detector/: __main__.py  patterns.json
tests/: __init__.py  test_detector.py  test_nlp.py  test_patternsets_json.py  test_syntax_patterns.py
(+206 files in other folders)
